# youtube_uploader_selenium

./: .gitignore  meta.json  pyproject.toml  test.py
youtube_uploader_selenium/: __init__.py
youtube_uploader_selenium/exceptions/: exceptions.py
youtube_uploader_selenium/log/: logger.py
youtube_uploader_selenium/page/: elements.py  pages.py
youtube_uploader_selenium/page_object/: page_object.py
youtube_uploader_selenium/util/: handle_cookie.py
youtube_uploader_selenium/utils/: login_type.py
